--- a/home/register.html
+++ b/home/register.html
@@ -32,7 +32,7 @@
         <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</label>
         <input type="text" id="Email"><br><br>
         <label>Password</label>
-        <input type="text" id="email"><br><br>
+        <input type="text" id="Password"><br><br>
         <label>Message</label>
         <textarea id="message" rows="1" cols="21"></textarea>
         <br><br>
@@ -45,7 +45,7 @@
             <option>"Australia"</option>
         </select>
         <br><br>
-        <lebel>Gender</lebel>
+        <label>Gender</label>
         <input type="radio" name="gender">male
         <input type="radio" name="gender">female
         <input type="radio" name="gender">others<br><br>
