--- a/home/java.html
+++ b/home/java.html
@@ -10,5 +10,42 @@
         <a href="register.html">register</a>&nbsp;&nbsp;&nbsp;
         <a href="contact us.html"> contact us</a>&nbsp;&nbsp;&nbsp;
         <br><br>
+        <form>
+            <h2>JAVA</h2>
+
+            <br><br>
+            <ul style="list-style-type:square;">
+                        <h3><li> Java - What, Where and Why?</li>
+                        <li>History and Features of Java</li>
+                        <li>Internals of Java Program</li>
+                        <li>Difference between JDK,JRE and JVM</li>
+                        <li>Internal Details of JVM</li>
+                        <li>Variable and Data Type</li>
+                        <li>Unicode System</li>
+                       <li> Naming Convention</li></h3>
+            </ul>
+            <h2>OOPS CONCEPT</h2>
+            <ol>
+                <h3><li>Advantage of OOPs</li>
+                <li>Object and Class</li>
+                <li>Method Overloading</li>
+                <li> Inheritance (IS-A)</li>
+                <li>Constructor</li>
+                <li> this keyword</li>
+                <li>static variable, method and block</li>
+                <li>Aggregation and Composition(HAS-A)</li>
+                <li>Method Overriding</li>
+                <li>Covariant Return Type</li>
+                <li>super keyword</li>
+                <li> Instance Initializer block</li>
+                <li>final keyword</li>
+                <li>Runtime Polymorphism</li>
+                <li>static and Dynamic binding</li>
+                <li>Abstract class and Interface</li>
+                <li>Downcasting with instanceof operator</li>
+                <li> Package and Access Modifiers</li>
+                <li> Encapsulation</li></h3>
+            </ol>
+        </form>
         </body>
         </html>
