--- a/home/index.html
+++ b/home/index.html
@@ -23,7 +23,7 @@
         <a href="./index.html">home</a>&nbsp;&nbsp;&nbsp;
         <a href="./login.html">login</a>&nbsp;&nbsp;&nbsp;
         <a href="./register.html">register</a>&nbsp;&nbsp;&nbsp;
-        <a href="./contact us.html"> contact us</a>&nbsp;&nbsp;&nbsp;
+        <a href="./contact us.html"> contact us</a>&nbsp;&nbsp;&nbsp;<br><br>
         <table id="table" style="border-collapse:collapse"align="center"border="1"height="50%"width="70%">
         <tr>
             <th>course name</th>
